# backends/auth/openapi.yaml
@@ -7,19 +7,16 @@ info:
     version: 0.0.1
 paths:
     /auth/v1/login:
-        get:
+        post:
             tags:
                 - Auth
             operationId: Auth_Login
-            parameters:
-                - name: username
-                  in: query
-                  schema:
-                    type: string
-                - name: hashPwd
-                  in: query
-                  schema:
-                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.auth.v1.LoginReq'
+                required: true
             responses:
                 "200":
                     description: OK
@@ -28,19 +25,16 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/api.auth.v1.LoginResp'
     /auth/v1/sign_up:
-        get:
+        post:
             tags:
                 - Auth
             operationId: Auth_Signup
-            parameters:
-                - name: username
-                  in: query
-                  schema:
-                    type: string
-                - name: hashPwd
-                  in: query
-                  schema:
-                    type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.auth.v1.SignupReq'
+                required: true
             responses:
                 "200":
                     description: OK
@@ -62,6 +56,13 @@ paths:
                                 $ref: '#/components/schemas/version.VersionReply'
 components:
     schemas:
+        api.auth.v1.LoginReq:
+            type: object
+            properties:
+                uid:
+                    type: string
+                hashPwd:
+                    type: string
         api.auth.v1.LoginResp:
             type: object
             properties:
@@ -69,9 +70,18 @@ components:
                     type: string
                 refreshToken:
                     type: string
+        api.auth.v1.SignupReq:
+            type: object
+            properties:
+                username:
+                    type: string
+                hashPwd:
+                    type: string
         api.auth.v1.SignupResp:
             type: object
-            properties: {}
+            properties:
+                uid:
+                    type: string
         version.VersionReply:
             type: object
             properties:
